--- a/src/Pages/LandingPage/LandingPage.module.css
+++ b/src/Pages/LandingPage/LandingPage.module.css
@@ -277,3 +277,13 @@
   font-size: 20px;
   box-sizing: border-box;
 }
+.testimonialWrapper {
+  width: 100%;
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 50px;
+}
+.testimonialWrapper img {
+  height: 90vh;
+}
