--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -1,65 +1,70 @@
+.AboutUsPage {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+@keyframes section1Animation {
+  0% {
+    width: 130%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+.section1Parent {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  height: 70vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.section {
+  width: 80%;
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
 
-.AboutUsPage{
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-   
-  }
-  @keyframes section1Animation {
-    0%   { width:130%;}
-    100% { width:100%;}
-  }
-  .section1Parent{
-    display: flex;
-    justify-content: center;
-  }
-  .section{
-    width: 80%;
-    margin: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 0px;
-  }
-  .section1{
-    width: 100%;
-  }
-  .section1_{
-    animation-name: section1Animation;
-    animation-duration: 2s;
-  }
-  .aboutUsText {
-    backface-visibility: hidden;
-    font-size: 2rem;
-    color:white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-weight: bold;
-  }
-.message {
-  color:rgb(2, 2, 27);
+.section1_ {
+  animation-name: section1Animation;
+  animation-duration: 2s;
+}
+.aboutUsText {
+  backface-visibility: hidden;
+  font-size: 2rem;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-weight: bold;
-  opacity: .7;
+}
+.message {
+  color: rgb(2, 2, 27);
+  font-weight: bold;
+  opacity: 0.7;
   font-size: 3rem;
   text-align: center;
 }
-.alignment{
+.alignment {
   width: 80%;
   text-align: center;
   margin: auto;
 }
-.paragraph{
+.paragraph {
   color: grey;
-  opacity: .7;
+  opacity: 0.7;
   font-size: 1.2rem;
   margin-top: 20px;
 }
 
-.gridItem{
+.gridItem {
   text-align: center;
 }
-.topContainer{
+.topContainer {
   margin: 0px;
   width: 100%;
   display: inline-grid;
@@ -67,100 +72,103 @@
   justify-content: center;
   margin-bottom: 50px;
   gap: 8rem;
-
 }
-.gridContainer{
- width: 100%;
- margin: 0px;
- display: inline-grid;
- grid-template-columns: auto auto auto auto;
- gap: 2rem;
- 
+.gridContainer {
+  width: 100%;
+  margin: 0px;
+  display: inline-grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 2rem;
 }
-.gridItemImg{
+.gridItemImg {
   width: 180px;
   height: 200px;
   margin: auto;
   margin-top: 0px;
-  
 }
-.count{
+.count {
   font-size: 4rem;
   text-align: center;
-  background:linear-gradient(90deg,rgb(0, 0, 20,1),rgba(0, 0, 20, 1),white);
+  background: linear-gradient(
+    90deg,
+    rgb(0, 0, 20, 1),
+    rgba(0, 0, 20, 1),
+    white
+  );
   background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 0px;
   padding: 0px;
-  
 }
-.supportingText{
+.supportingText {
   font-size: 1rem;
   text-align: center;
-  color:rgb(2, 2, 27);
-  opacity: .8;
+  color: rgb(2, 2, 27);
+  opacity: 0.8;
   margin: 0px;
   padding: 0px;
 }
 
-.backgroundForAll{  
+.backgroundForAll {
   background-color: white;
 }
-.floatingImages{
+.floatingImages {
   width: 20rem;
   height: 12rem;
   border-radius: 5px;
-
 }
 
-.text_s4_p2{
+.text_s4_p2 {
   width: 65%;
   text-align: center;
   padding: 0px;
   margin: 0px;
 }
-.section4container{
+.section4container {
   margin-top: 100px;
   display: inline-flex;
   justify-content: center;
   gap: 2rem;
 }
 @keyframes animationImages {
-  0%   {  top:0px;}
-  50%  { top:30px;}
-  100% { top:0px;}
+  0% {
+    top: 0px;
+  }
+  50% {
+    top: 30px;
+  }
+  100% {
+    top: 0px;
+  }
 }
 
-.containerOfAnimatedImages{
+.containerOfAnimatedImages {
   position: relative;
   animation-name: animationImages;
   animation-duration: 10s;
   animation-iteration-count: infinite;
 }
-#bottomImage{
+#bottomImage {
   position: relative;
-  transition: transform 2.50s ease;
+  transition: transform 2.5s ease;
   bottom: 31%;
   left: 0%;
 }
 #topImage {
-  transition: transform 2.50s ease;
+  transition: transform 2.5s ease;
   position: relative;
   top: 20%;
   left: 40%;
-  
 }
-#bottomImage:hover{
+#bottomImage:hover {
   transform: scale(1.2);
-
 }
-#topImage:hover{
+#topImage:hover {
   transform: scale(1.2);
-
 }
 
 /* section 5 */
-.AboutUsSection5{
+.AboutUsSection5 {
   height: 40vh;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.2);
@@ -170,11 +178,8 @@
   flex-direction: column;
   margin-bottom: 0rem;
   backdrop-filter: blur(5px);
-
-
-  
 }
-.establishMessage{
+.establishMessage {
   background-color: rgba(128, 128, 128, 0.3);
   width: fit-content;
   height: fit-content;
@@ -182,72 +187,68 @@
   padding-inline: 5px;
   border-radius: 5px;
   font-weight: 500;
-  color: rgb(0, 0, 20,.8);
- 
+  color: rgb(0, 0, 20, 0.8);
 }
-.secondLine{
+.secondLine {
   font-size: 1rem;
   font-weight: bold;
   margin-inline: auto;
   width: fit-content;
   margin-block: 1rem;
-  color: rgb(0, 0, 20,.6);
-  
+  color: rgb(0, 0, 20, 0.6);
 }
-.gridView{
+.gridView {
   margin-inline: auto;
   height: fit-content;
 }
 /* .AboutUsSection5:hover{
   box-shadow: 3px 3px 10px  2px rgba(128, 128, 128, 1);
 } */
-.svg1{
- background-image: url("../../Assets/Images/wave.svg");
- background-repeat: no-repeat;
- margin-top: 4rem;
- padding-bottom: .5rem;
- background-size: 100%;
- padding-bottom: 2rem;
+.svg1 {
+  background-image: url("../../Assets/Images/wave.svg");
+  background-repeat: no-repeat;
+  margin-top: 4rem;
+  padding-bottom: 0.5rem;
+  background-size: 100%;
+  padding-bottom: 2rem;
 }
 /* final part css  */
 
-.smallText> *{
+.smallText > * {
   width: fit-content;
-  font-size: .9rem;
+  font-size: 0.9rem;
   font-weight: bold;
-
 }
-.bigText> *{
+.bigText > * {
   width: fit-content;
   margin-inline: auto;
   font-size: 3rem;
 }
 .smallText {
-  padding-inline: .5rem;
-  background-color: rgb(0, 0, 20,.1);
+  padding-inline: 0.5rem;
+  background-color: rgb(0, 0, 20, 0.1);
   border-radius: 3px;
   width: fit-content;
   height: fit-content;
   margin-inline: auto;
 }
-.finalPart{
+.finalPart {
   width: 100%;
   margin-inline: auto;
-  background-color: rgb(0, 0, 20,.05);
-  padding-block:7rem ;
+  background-color: rgb(0, 0, 20, 0.05);
+  padding-block: 7rem;
 }
-.apply{
+.apply {
   width: fit-content;
   height: fit-content;
   margin-inline: auto;
   font-weight: 500;
   font-size: 1rem;
-  color: rgb(0, 0, 20,.7);
+  color: rgb(0, 0, 20, 0.7);
 }
-.apply:hover{
+.apply:hover {
   cursor: pointer;
 }
-.apply1:hover{
-  box-shadow: 0px 3px rgb(0, 0, 20,.4);
+.apply1:hover {
+  box-shadow: 0px 3px rgb(0, 0, 20, 0.4);
 }
-
