--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -1,261 +1,284 @@
-
-.section{
-    width: 80%;  
+.section {
+  width: 80%;
 }
 
-.text1{
-    border: 2px solid red;
-    width: fit-content;
-    height: fit-content;
+.text1 {
+  border: 2px solid red;
+  width: fit-content;
+  height: fit-content;
 }
 
-.stunningProjects{
-    width: fit-content;
-    height: fit-content;
-    padding-inline:5px;
-    background-color: rgb(2, 2, 27,.8);
-    margin-inline: auto;
-    border-radius: 5px;
-    font-weight: bold;
-    color: white;
-    font-size: 1rem;
-    margin-top: 2rem;
+.stunningProjects {
+  width: fit-content;
+  height: fit-content;
+  padding-inline: 5px;
+  background-color: rgb(2, 2, 27, 0.8);
+  margin-inline: auto;
+  border-radius: 5px;
+  font-weight: bold;
+  color: white;
+  font-size: 1rem;
+  margin-top: 2rem;
 }
-.stunningProjectsMessage{
-    
-    color: rgb(2, 2, 27, .7);
-    width: 75%;
-    height: fit-content;
-    font-size: 3rem;
-    font-weight: bold;
-    margin-inline: auto;
-    text-align: center;
-    margin-block: 1rem;
+.stunningProjectsMessage {
+  color: rgb(2, 2, 27, 0.7);
+  width: 75%;
+  height: fit-content;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-inline: auto;
+  text-align: center;
+  margin-block: 1rem;
 }
-.projectList{
-   display: grid;
-   border: 4px solid steelblue;
-   grid-auto-flow: column;
-    /* wrap just in the mean time... ill remove later */
-    /* flex-wrap: wrap; */
+.projectList {
+  display: grid;
+  border: 4px solid steelblue;
+  grid-auto-flow: column;
+  /* wrap just in the mean time... ill remove later */
+  /* flex-wrap: wrap; */
 }
 
-.listItem{
-    border-radius: 3px;
-    width: 16rem;
-    margin-bottom: 1rem;
+.listItem {
+  border-radius: 3px;
+  width: 16rem;
+  margin-bottom: 1rem;
 }
-.dotStyle{
-    border-style: solid;
-    border-width: 2px;
-    border-color: steelblue;
-    border-radius: 6px;
-    width: 10px;
-    height: 10px;
-    margin-left:.5rem ;  
+.dotStyle {
+  border-style: solid;
+  border-width: 2px;
+  border-color: steelblue;
+  border-radius: 6px;
+  width: 10px;
+  height: 10px;
+  margin-left: 0.5rem;
 }
-.dotStyle:hover{
-    background-color: rgba(70, 131, 180, 0.7);
+.dotStyle:hover {
+  background-color: rgba(70, 131, 180, 0.7);
 }
-.imageSliderContainer{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: .5rem;
-    border: 3px solid black;
-    justify-content: center;
-    
+.imageSliderContainer {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 0.5rem;
+  border: 3px solid black;
+  justify-content: center;
 }
-.dotContainer{
-    display: flex;
-    margin-block: 5rem;
-    margin-top: 1rem;
+.dotContainer {
+  display: flex;
+  margin-block: 5rem;
+  margin-top: 1rem;
 }
-.headingForRows{
-    font-size: 3rem;
-    text-align: center;
-    margin: 0px;
-    padding: 0px;
-    height: fit-content;
-    font-weight: bold;
-    color:rgb(2, 2, 27) ;
-    margin-top: 1rem;
+.headingForRows {
+  font-size: 3rem;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  height: fit-content;
+  font-weight: bold;
+  color: rgb(2, 2, 27);
+  margin-top: 1rem;
 }
-.carouselContainer{
+.carouselContainer {
   margin-bottom: 6rem;
 }
 
-
 /* section 3  */
-.projectsSection3{
-    background: linear-gradient(135deg,rgb(2, 2, 27),white);
-    height: fit-content;
-    width: 100%;
-    
-
+.projectsSection3 {
+  background: linear-gradient(135deg, rgb(2, 2, 27), white);
+  height: fit-content;
+  width: 100%;
 }
-.section{
-    text-align: center;
-    margin-inline: auto;
-    width: 80%;
-    display: grid;
-    grid-template-columns: 54.5% 44.5%;
-    color: white;
-    padding-block: 7rem;
-    justify-content: center;
+.section {
+  text-align: center;
+  margin-inline: auto;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 54.5% 44.5%;
+  color: white;
+  padding-block: 7rem;
+  justify-content: center;
 }
 
-.message{
-    padding-top: 5rem;
+.message {
+  padding-top: 5rem;
 }
-.form{
-    background-color: white;
-    height: fit-content;
-    width: 100%;
-    box-shadow: 1px 1px 5px black;
-    border-radius: 5px;
-    padding: .5rem;
-}
-
-.buttonSubmit{
-    margin-top: 1rem;
-    font-size: 1rem;
-    color:white;
-    background:linear-gradient(90deg,rgba(2, 2, 27, 0.9),rgba(2, 2, 27, .9),rgba(2, 2, 27, .7)) ;
-    padding: 1rem;
-    font-weight: bold;
-    border-width: 0px;
-    border-radius: 5px;
-}
-.buttonSubmit:hover{
-    opacity: .8;
-}
-.input:focus{
-    outline: none;
+.form {
+  background-color: white;
+  height: fit-content;
+  width: 100%;
+  box-shadow: 1px 1px 5px black;
+  border-radius: 5px;
+  padding: 0.5rem;
 }
 
-.paragraphInForm> textarea:focus{
-    outline: none;
+.buttonSubmit {
+  margin-top: 1rem;
+  font-size: 1rem;
+  color: white;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 2, 27, 0.9),
+    rgba(2, 2, 27, 0.9),
+    rgba(2, 2, 27, 0.7)
+  );
+  padding: 1rem;
+  font-weight: bold;
+  border-width: 0px;
+  border-radius: 5px;
 }
-.paragraphInForm{
-    display:grid;
-    width: 100%;
-    contain: content;
-   
+.buttonSubmit:hover {
+  opacity: 0.8;
+}
+.input:focus {
+  outline: none;
+}
+
+.paragraphInForm > textarea:focus {
+  outline: none;
+}
+.paragraphInForm {
+  display: grid;
+  width: 100%;
+  contain: content;
 }
 .paragraphInForm > label {
-    margin-inline: 5px;
-    
+  margin-inline: 5px;
 }
-.paragraphInForm> textarea{
-    height: 7rem;
-    border-radius: 5px;
-    background-color: rgba(2, 2, 27, 0.025);
-    color: grey;
-    font-size: 1rem;
-    text-align: start;
-    word-wrap: break-word;
-    word-break: break-all;
-    margin-inline: 5px;
-    outline: none;
-    resize: none;
-    border: none;
-    overflow: auto;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-
-
-    
+.paragraphInForm > textarea {
+  height: 7rem;
+  border-radius: 5px;
+  background-color: rgba(2, 2, 27, 0.025);
+  color: grey;
+  font-size: 1rem;
+  text-align: start;
+  word-wrap: break-word;
+  word-break: break-all;
+  margin-inline: 5px;
+  outline: none;
+  resize: none;
+  border: none;
+  overflow: auto;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
-.formContent{
-    display: grid;
-    width: 48%;
-    margin-left: .3rem;
+.formContent {
+  display: grid;
+  width: 48%;
+  margin-left: 0.3rem;
 }
-.containerWithinForm{
-    display: flex;
-    gap:.5rem;
-    flex-wrap: wrap;
+.containerWithinForm {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-.input{
-    height: 2rem;
-    border-width: 0;
-    border-radius: 5px;
-    background-color: rgba(2, 2, 27, 0.025);
-    color: grey;
-    font-size: 1rem;
-    width: 14rem;
-    color: black;
+.input {
+  height: 2rem;
+  border-width: 0;
+  border-radius: 5px;
+  background-color: rgba(2, 2, 27, 0.025);
+  color: grey;
+  font-size: 1rem;
+  width: 14rem;
+  color: black;
 }
-.formSubtitle{
-    text-align: start;
-    color: grey;
-    opacity: .7;
-    font-size: 1.15rem;
-    margin-top: .7rem;
+.formSubtitle {
+  text-align: start;
+  color: grey;
+  opacity: 0.7;
+  font-size: 1.15rem;
+  margin-top: 0.7rem;
 }
-.formTitle{
-    color:rgb(2, 2, 27);
-    font-weight: bold;
-    opacity: .8;
-    font-size: 2rem;
-    
+.formTitle {
+  color: rgb(2, 2, 27);
+  font-weight: bold;
+  opacity: 0.8;
+  font-size: 2rem;
 }
-.deals{
-    padding: .6rem;
-    padding-left:.2rem;
-    font-size: .8rem;
-    font-weight: bold;
-    width: fit-content;
-    background-color: rgba(2, 2, 27, 0.1);
-    border-radius: 19px;
-   
+.deals {
+  padding: 0.6rem;
+  padding-left: 0.2rem;
+  font-size: 0.8rem;
+  font-weight: bold;
+  width: fit-content;
+  background-color: rgba(2, 2, 27, 0.1);
+  border-radius: 19px;
 }
-.deals> span{
-    margin-block: auto;
+.deals > span {
+  margin-block: auto;
 }
-.exclusive{
-    
-    background-color: rgb(105, 212, 177);
-    border-radius: 17px;
-    padding: 4px;
-    
+.exclusive {
+  background-color: rgb(105, 212, 177);
+  border-radius: 17px;
+  padding: 4px;
 }
-.innerGrid{
-    width: 90%;
-    text-align: start;
-    display:grid;
-    gap: 1rem;
-    justify-content: start;
+.innerGrid {
+  width: 90%;
+  text-align: start;
+  display: grid;
+  gap: 1rem;
+  justify-content: start;
 }
 
-.subjectLine{
-    padding-top: 2rem;
-    font-size: 2.5rem;
-    font-weight: bold;
+.subjectLine {
+  padding-top: 2rem;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
-.storyLine{
-    font-size: 1.25rem;
+.storyLine {
+  font-size: 1.25rem;
 }
-.moreInfoButton{
-    background-color: white;
-    color: black;
-    padding: .3rem;
-    border: 2px solid black;
+.moreInfoButton {
+  background-color: white;
+  color: black;
+  padding: 0.3rem;
+  border: 2px solid black;
 }
-.moreInfoButton:hover{
-    background-color: black;
-    color: white;
+.moreInfoButton:hover {
+  background-color: black;
+  color: white;
 }
 .triangle {
-    width:0; 
-    border-bottom:120px solid red; 
-    border-left:60px solid white; 
-    border-right:60px solid white;
+  width: 0;
+  border-bottom: 120px solid red;
+  border-left: 60px solid white;
+  border-right: 60px solid white;
 }
-.animationForm{
-    color: black;
-    font-weight: bold;
-    padding: 1rem;
+.animationForm {
+  color: black;
+  font-weight: bold;
+  padding: 1rem;
+}
+
+@keyframes section1Animation {
+  0% {
+    transform: scale(1.7);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.section1Parent {
+  height: 70vh;
+  position: relative;
+
+  overflow: hidden;
+}
+.innerWrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation-name: section1Animation;
+  animation-duration: 2s;
+}
+.section {
+  width: 80%;
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
 }
