--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -10,6 +10,18 @@
   width: 100%;
   height: 100%;
 }
+.bgImg_wrapper {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh + 30px);
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-color: red; */
+}
 .backDrop {
   width: 100%;
   height: calc(100vh + 50px);
@@ -85,6 +97,9 @@
   height: 500px;
   margin-left: 50px;
   /* background-color: red; */
+}
+.cardsWrapper img {
+  width: 100%;
 }
 .heroCard {
   position: absolute;
