--- a/src/Pages/WhatWeDo2/WhatWeDo2.module.css
+++ b/src/Pages/WhatWeDo2/WhatWeDo2.module.css
@@ -193,6 +193,7 @@
   background: linear-gradient(135deg, rgb(2, 2, 27), white);
   height: fit-content;
   width: 100%;
+  margin-top: 50px;
 }
 .section3Container {
   display: flex;
@@ -220,12 +221,7 @@ a {
   height: fit-content;
   width: 100%;
 }
-.section_2 {
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 80px;
-  margin-bottom: 30px;
-}
+
 .mySectio {
   width: 100%;
   margin: 0px;
@@ -245,15 +241,14 @@ a {
   background-color: rgba(4, 4, 51);
 }
 .last2Cards {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px;
+  margin-top: 40px;
 }
 .cards_gridWrapper {
-  width: 100%;
-  height: 50%;
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 30px;
   grid-template-columns: repeat(3, 1fr);
 }
 .cards_gridWrapper2 {
@@ -272,6 +267,7 @@ a {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3, 1fr);
+  background-color: aqua;
 }
 
 .WWDsection1Parent {
@@ -323,4 +319,9 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   font-weight: bold;
+}
+.section1_innerWrapper {
+  /* background-color: red; */
+  max-width: 1140px;
+  margin: 0 auto;
 }
